# carrousel

./: .gitignore  .travis.yml  Makefile.am  README  README.md  autogen.sh  carrousel.c  carrousel.h  configure.ac  main.c
data/: Makefile.am
data/images/: Makefile.am
data/themes/: Makefile.am
data/themes/default/: Makefile.am  default.edc
doc/: Makefile.am  cosa.eps  cosb.eps  trigo.eps  tutorial.tex
